--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">PRISME</a>
+    <a class="navbar-brand" href="<%= root_path %>">PRISME</a>
   </div>
   <div>
     <ul class="nav navbar-nav">
@@ -9,9 +9,9 @@
       </li>
       <% if policy(:navigation).registered? %>
           <li><a href="<%= terminology_converter_path %>" onclick="polling.checkPolling('converter');">Terminology Converter</a></li>
+          <li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>
           <li><a href="<%= app_deployer_path %>" onclick="polling.checkPolling('deployer');">App Deployer</a></li>
       <% end %>
-      <li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>
       <li><a href="<%= prisme_job_queue_list_path %>" onclick="polling.checkPolling('job_queue');">Job Queue Listing</a></li>
       <% if policy(:navigation).admin? %>
           <li><a href="<%= services_path %>" onclick="polling.checkPolling('deployer');">Service Provisioning</a></li>
