--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -1,10 +1,62 @@
+<style>
+  html, body {
+    padding: 5px;
+  }
+
+  .ajax-table {
+    font-family: calibri, arial;
+    width: 100%;
+  }
+
+  .ajax-table thead td {
+    background-color: #8CCCF1;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: bottom;
+  }
+
+  .ajax-table td {
+    border: 1px solid #466E85;
+    width: 136px;
+    padding: 7px;
+  }
+</style>
+
 <!-- Trigger the modal with a button -->
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="reset_form();">Request New Build</button>
 
 <h1>Terminology Converter Dashboard</h1>
-
-<!-- Jenkins build job ag-grid div -->
-<div id="build_results_div" style="height: 100%;" class="ag-fresh"></div>
+<div>
+  <label for="filter_rows">Filter Results:&nbsp;&nbsp;</label>
+  <select id="filter_rows" onchange="poll();">
+    <option value="15">15 Rows</option>
+    <option value="30">30 Rows</option>
+    <option value="45">45 Rows</option>
+    <option value="60">60 Rows</option>
+    <option value="999999">All Rows</option>
+  </select>
+</div>
+<table id="data-table" class="ajax-table">
+  <thead>
+  <tr>
+    <td>Job Name</td>
+    <td>Started At</td>
+    <td>User Name</td>
+    <td>Jenkins Build Name</td>
+    <td>Attempts</td>
+    <td>Build Result</td>
+    <td>Last Check<br>Completed At</td>
+    <td>Elapsed Time</td>
+    <td>Jenkins Job<br>Deleted?</td>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td colspan="9" style="text-align:center">There are no items to list...</td>
+  </tr>
+  </tbody>
+</table>
+<br/>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -23,7 +75,7 @@
             <br>
             <br>
             <div class="modal-footer">
-              <%= submit_tag "Submit", data: {disable_with: "Please wait..."} %>
+              <%= submit_tag 'Submit', data: {disable_with: 'Please wait...'}, class: 'btn btn-primary', onclick: "$('#terminology_source').readonly=true" %>
             </div>
         <% end %>
       </div>
@@ -33,71 +85,49 @@
 
 <script>
   function reset_form() {
-    $('#terminology_source option[value=""]').prop('selected', 'selected').change();
+    $('#terminology_source').find('option[value=""]').prop('selected', 'selected').change();
   }
 
   function build_status_renderer(params) {
-    var element = document.createElement("span");
-    var textNode = document.createTextNode(params.value);
+    var ret = "\<span style=\"color: COLOR\"\>IMG" + params + "\<\/span\>";
+    var img = '';
+    var color = 'black';
 
-    switch (params.value) {
+    switch (params) {
       case '<%= JenkinsCheckBuild::BuildResult::INQUEUE %>':
       case '<%= JenkinsCheckBuild::BuildResult::IN_PROCESS %>':
       case '<%= JenkinsCheckBuild::BuildResult::REBUILDING %>':
       case '<%= JenkinsCheckBuild::BuildResult::BUILDING %>':
       default:
-        var imageElement = document.createElement("img");
-        imageElement.src = "ajax-loader.gif";
-        element.appendChild(imageElement);
+        img = "\<img src=\"ajax-loader.gif\"\/>";
         break;
       case '<%= JenkinsCheckBuild::BuildResult::SUCCESS %>':
-        element.style.color = 'green';
+        color = 'green';
         break;
       case '<%= JenkinsCheckBuild::BuildResult::SERVER_ERROR %>':
       case '<%= JenkinsCheckBuild::BuildResult::FAILURE %>':
       case '<%= JenkinsCheckBuild::BuildResult::ABORTED %>':
       case '<%= JenkinsCheckBuild::BuildResult::UNKNOWN %>':
       case '<%= JenkinsCheckBuild::BuildResult::UNSTABLE %>':
-        element.style.color = 'red';
+        color = "red";
         break;
     }
 
-    element.appendChild(textNode);
-    return element;
+    ret = ret.replace("COLOR", color);
+    ret = ret.replace("IMG", img);
+    return ret;
   }
-  function format_epoch_in_local(params) {
-    var ret = params.value;
 
-    if ($.isNumeric(params.value)) {
-      var i = parseInt(params.value) * 1000;
+  function format_epoch_in_local(epoch) {
+    var ret = epoch;
+
+    if ($.isNumeric(epoch)) {
+      var i = parseInt(epoch) * 1000;
       ret = new Date(i).toLocaleString();
     }
     return ret;
   }
 
-  var columnDefs = [
-    {headerName: "Job Name", field: "job_name", width: 150},
-    {headerName: "Started At", field: "started_at", width: 215,
-      cellRenderer: function (params) {
-        return format_epoch_in_local(params);
-      }
-    },
-    {headerName: "User", field: "user", width: 110},
-    {headerName: "Jenkins Build Name", field: "leaf_data.jenkins_job_name", width: 350},
-    {headerName: "Attempts", field: "leaf_data.jenkins_attempt_number", width: 150},
-    {
-      headerName: "Build Result", field: "leaf_data.jenkins_build_result", width: 100,
-      cellRenderer: function (params) {      // Function cell renderer
-        return build_status_renderer(params);
-      }
-    },
-    {headerName: "Completed At", field: "leaf_data.completed_at", width: 215,
-      cellRenderer: function (params) {
-        return format_epoch_in_local(params);
-      }
-    },
-    {headerName: "Jenkins Job Deleted?", field: "leaf_data.jenkins_job_deleted", width: 200}
-  ];
   /*
    {"job_id":"4c0a2d3c-255d-429e-9dfb-68739d8d9f11","job_name":"JenkinsStartBuild","status":4,"queue":"default","scheduled_at":"2016-04-27T20:59:49.841Z",
    "enqueued_at":"2016-04-27T20:59:49.902Z","started_at":"2016-04-27T20:59:49.911Z","completed_at":"2016-04-27T20:59:51.312Z","last_error":null,
@@ -106,39 +136,60 @@
    "leaf_data":{"jenkins_check_job_id":"7d0826f8-6c55-46a3-8c0e-36b1a8456ced","jenkins_job_name":"PRISME_ISAAC-term-convert-loinc_2016_04_27T16_59_49",
    "jenkins_attempt_number":1,"jenkins_build_result":"SUCCESS","jenkins_job_deleted":"yes"}}
    */
+  var fields = ['job_name', 'started_at', 'user', 'leaf_data.jenkins_job_name', 'leaf_data.jenkins_attempt_number', 'leaf_data.jenkins_build_result', 'leaf_data.completed_at', 'leaf_data.elapsed_time', 'leaf_data.jenkins_job_deleted'];
 
-  var gridOptions = {
-    columnDefs: columnDefs,
-    enableColResize: true,
-    rowData: null
-  };
+  function loadTable(tableId, fields, data) {
+    var rows = '';
+
+    $.each(data, function (index, row) {
+      var tr_data = '<tr>';
+
+      $.each(fields, function (index, field) {
+        if (field === 'started_at') {
+          tr_data += '<td>' + format_epoch_in_local(row.started_at) + '</td>';
+        }
+        else if (field === 'leaf_data.jenkins_build_result') {
+          tr_data += '<td>' + build_status_renderer(row.leaf_data.jenkins_build_result) + '</td>';
+        }
+        else if (field === 'leaf_data.completed_at') {
+          tr_data += '<td>' + format_epoch_in_local(row.leaf_data.completed_at) + '</td>';
+        }
+        else {
+          tr_data += '<td>' + eval('row.' + field) + '</td>';
+        }
+      });
+      rows += tr_data + '<tr>';
+    });
+    $('#' + tableId + ' tbody').html(rows);
+  }
 
   function poll() {
     console.log('calling poll');
-    $.getJSON(gon.routes.terminology_converter_load_build_data_path, {}, function (data) {
-      gridOptions.api.setRowData(data);
-      gridOptions.api.sizeColumnsToFit();
+    var row_limit = parseInt($('#filter_rows').find('option:selected').val());
+
+    $.getJSON(gon.routes.terminology_converter_load_build_data_path, {row_limit: row_limit}, function (data) {
+      loadTable('data-table', fields, data);
 
       <% if Rails.env.development? %>
-      $.getJSON(gon.routes.terminology_converter_check_polling_path, {}, function (data) {
-        console.log(JSON.stringify(data));
-        if (data.poll === false) {
-          polling.unregisterController('terminology_converter');
-        }
-      });
+      if (polling.isPolling('terminology_converter')) {
+        $.getJSON(gon.routes.terminology_converter_check_polling_path, {}, function (data) {
+          console.log(JSON.stringify(data));
+          if (data.poll === false) {
+            polling.unregisterController('terminology_converter');
+
+            //call final poll in case there is a timing issue
+            poll();
+          }
+        });
+      }
       <% end %>
     });
   }
 
   $(document).ready(function () {
-    var gridDiv = document.querySelector("#build_results_div");
-    new agGrid.Grid(gridDiv, gridOptions);
     poll();
 
     //register for polling
-    polling.registerController('terminology_converter', poll, 15000);
-
-//    you want to call gridOptions.api.destroy(); when leaving to prevent memory leak
-
+    polling.registerController('terminology_converter', poll, 5000);
   });
 </script>
