--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,7 @@
       </li>
       <% if policy(:navigation).registered? %>
           <li><a href="<%= terminology_converter_path %>" onclick="polling.checkPolling('converter');">Terminology Converter</a></li>
-          <li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>
+          <!--<li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>-->
           <li><a href="<%= app_deployer_path %>" onclick="polling.checkPolling('deployer');">App Deployer</a></li>
       <% end %>
       <li><a href="<%= prisme_job_queue_list_path %>" onclick="polling.checkPolling('job_queue');">Job Queue Listing</a></li>
