added convenience method for TermConvertOption; added term_source_change_content partial for GUI; modified term_converter index page to use ajax to render the content partial onchange; added ajax route;

--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -66,24 +66,20 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Select the Terminology Source</h4>
+        <h4 class="modal-title">Terminology Conversion Request</h4>
       </div>
       <div class="modal-body">
         <%= form_tag(:controller => 'terminology_converter', :action => :request_build, remote: true) do |f| %>
             <%= label_tag 'terminology_source', 'Terminology Source' %><br>
-            <%= select_tag 'terminology_source', options_from_collection_for_select(@sources, :option_key, :option_value), :include_blank => '-- Select the Terminology Source --', required: true %>
+            <%= select_tag 'terminology_source', options_from_collection_for_select(@sources, :option_key, :option_value),
+                           :include_blank => '-- Select the Terminology Source --', required: true,
+                           :onchange => 'term_source_change(this.value)'
+            %>
             <br>
             <br>
-            <%= label_tag 'converter_version', 'Converter Version' %><br>
-            <%= text_field_tag 'converter_version', '3.1-SNAPSHOT', readonly: true, required: true %>
-            <br>
-            <br>
-            <%= label_tag 'converted_terminology', 'Converted Terminology Artifact' %><br>
-            <%= select_tag 'converted_terminology', options_from_collection_for_select(@converts, :option_key, :option_value, 'gov.vha.isaac.terminology.converted|rf2-ibdf-sct|20150731-loader-3.1-SNAPSHOT|Snapshot'), :include_blank => '-- Select the Converted Terminology Artifact --', required: true, disabled: true%>
-            <br>
-            <br>
+            <div id="term_source_details_div"></div>
             <div class="modal-footer">
-              <%= submit_tag 'Submit', data: {disable_with: 'Please wait...'}, class: 'btn btn-primary', onclick: "$('#converted_terminology').removeAttr('disabled');" %>
+              <%= submit_tag 'Submit', data: {disable_with: 'Please wait...'}, class: 'btn btn-primary' %>
               <%= button_tag 'Cancel', data: {dismiss: 'modal'}, class: 'btn btn-primary' %>
             </div>
         <% end %>
@@ -93,8 +89,25 @@
 </div>
 
 <script>
+  function term_source_change(val) {
+    if (val.length === 0) {
+      $('#term_source_details_div').html('');
+      return false;
+    }
+
+    $.ajax({
+      url: gon.routes.terminology_converter_term_source_change_path,
+      type: "GET",
+      data: {term_source: val},
+      success: function (data) {
+        $('#term_source_details_div').html(data);
+      }
+    });
+  }
+
   function reset_form() {
     $('#terminology_source').find('option[value=""]').prop('selected', 'selected').change();
+    $('#term_source_details_div').html('');
   }
 
   function build_status_renderer(params) {
