--- a/config/service/jenkins_job_config.xml.erb
+++ b/config/service/jenkins_job_config.xml.erb
@@ -44,7 +44,7 @@
     </userRemoteConfigs>
     <branches>
       <hudson.plugins.git.BranchSpec>
-        <name><%= tag_name %></name><!--pass the tag here! returned from method call e.g. "rf2-ibdf-us-extension/20150301-loader-3.1-SNAPSHOT" -->
+        <name><%= tag_name %></name>
       </hudson.plugins.git.BranchSpec>
     </branches>
     <doGenerateSubmoduleConfigurations>false</doGenerateSubmoduleConfigurations>
