centering of flash on public pages

--- a/public/error_dialog.css
+++ b/public/error_dialog.css
@@ -1,7 +1,7 @@
 body {
     background-color: #EFEFEF;
     color: #2E2F30;
-    text-align: center;
+    text-align: left;
     font-family: arial, sans-serif;
     margin: 0;
 }
