--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,13 @@
+<style>
+  .centered_flash {
+    display: table;
+    margin: 0 auto;
+  }
+</style>
+
 <% flash.each do |name, msg| %>
     <% if msg.is_a?(String) %>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+        <%= content_tag :div, msg, :id => "flash_#{name}", class: 'centered_flash' if @centered_flash %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" unless @centered_flash %>
     <% end %>
 <% end %>
