--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require jquery.steps-1.1.0/jquery.steps
  *= require ag-grid
  *= require jquery-ui
+ * require toastr
  *= require_tree .
  *= require_self
  */
@@ -21,3 +22,12 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #f2f2f2;
+}
+
+/* line 125, C:/work/ETS/gem_home/gems/bootstrap-sass-3.3.6/assets/stylesheets/bootstrap/_tables.scss */
+.table-hover > tbody > tr:hover {
+  background-color: #dde7f5;
+}
