added notification gem for flash messages with ajax; fixed bug with invalid carriage returns in context name causing javascript errors; added code for visual when user starts/stops/undeploys on the main page with flash message on successful ajax return

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,8 @@
  *= require jquery.steps-1.1.0/jquery.steps
  *= require ag-grid
  *= require jquery-ui
- * require toastr
+ * this is for styling of the ajax_flash notification code
+ *= require animate
  *= require_tree .
  *= require_self
  */
