--- a/app/views/prisme_job_queue/list.html.erb
+++ b/app/views/prisme_job_queue/list.html.erb
@@ -21,6 +21,8 @@
   }
 </style>
 
+<button id="btn-update">Refresh List</button>
+
 <table id="data-table">
   <thead>
   <tr>
@@ -44,8 +46,6 @@
   </tbody>
 </table>
 <br/>
-
-<button id="btn-update">Update List</button>
 
 <script>
   $(document).ready(function (e) {
