--- a/app/views/welcome/_deployments.html.erb
+++ b/app/views/welcome/_deployments.html.erb
@@ -39,13 +39,18 @@
 
   function tomcat_app(elem, tomcat_service_id, action, app) {
     var btn = '#' + elem.id + ' > i';
-    if ($(btn).hasClass("fa-spin")) {
+    if ($(btn).hasClass('processing')) {
+      console.log('stop clicking on the ' + action + ' button!!!!');
       return false;
     }
 
     // change the icon to the spinner and make the ajax call
     $(btn).removeClass();
     $(btn).addClass('fa fa-cog fa-spin fa-fw');
+
+    //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
+    var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
+    $(clean_id).addClass('processing');
 
     $.ajax({
       url: gon.routes.welcome_tomcat_app_action_path,
