changed transition effect and sizing of app deployer

--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -66,7 +66,7 @@ this style is for the more complex validation check
     form.steps({
       headerTag: "h3",
       bodyTag: "fieldset",
-      transitionEffect: "slideLeft",
+      transitionEffect: "fade",
       onStepChanging: function (event, currentIndex, newIndex) {
         // Always allow previous action even if the current form is not valid!
         if (currentIndex > newIndex) {
