--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require jquery.smartWizard/smart_wizard
+ * require jquery.smartWizard/smart_wizard
  *= require jquery.steps-1.1.0/jquery.steps
  *= require ag-grid
  *= require jquery-ui
